# FAMfs

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
client/: famfs.pc.in
client/check_fns/: unifycr_list.txt  unifycr_translate.py
client/src/: Makefile.am  f_helper.c  fam_stripe.c  fam_stripe.h  famfs.c  famfs.h  gotcha_map_unifycr_list.h  lf_client.c  lf_client.h  libfabric.h  unifycr-fixed.c  unifycr-fixed.h  unifycr-internal.h  unifycr-path_utils.c  unifycr-stdio.c  unifycr-stdio.h  unifycr-sysio.c  unifycr-sysio.h  unifycr.c  unifycr.h
client/tests/: Makefile.am  fabtest.c  test_btio.c  test_listread.c  test_p_rw.c  test_pread.c  test_prw.c  test_prw.c.Warmup  test_pwrite.c  test_read.c  test_tileio.c  test_write.c  test_writeread.c  test_writeread2.c
common/src/: Makefile.am  f_bbitmap.c  f_bbitmap.h  f_bbitops.h  f_bbitops_test.c  f_bitmap.c  f_bitmap.h  f_bitops.h  f_bitops_test.c  f_configurator.c  f_configurator.h  f_dict.c  f_dict.h  f_env.h  f_error.h  f_global.h  f_helper.h  f_ja.c  f_ja.h  f_ktypes.h  f_layout.c  f_layout.h  f_lf_connect.c  f_lf_connect.h  f_lfa.c  f_lfa.h  f_map.c  f_map.h  f_map_test.c  f_maps.c  f_maps.h  f_pool.c  f_pool.h  f_rbq.c  f_rbq.h  f_shmap_test.c  f_stats.c  f_stats.h  f_stripe.c  f_stripe.h  (+45 more)
docs/: start-stop.rst
meta/: Makefile.cfg  example.Makefile.cfg
meta/src/: Makefile.am  client.c  client.h  ds_leveldb.c  ds_leveldb.h  f_map.c  f_map.h  f_map_cnode_test.c  f_map_mnode_test.c  f_map_test.c  famfs.conf  indexes.c  indexes.h  local_client.c  local_client.h  mdhim.c  mdhim.h  mdhim_options.c  mdhim_options.h  mdhim_private.c  mdhim_private.h  messages.c  messages.h  partitioner.c  partitioner.h  range_server.c
meta/src/Mlog2/: mlog2.c
meta/src/uthash/: uthash.h
meta/tests/single_tests/: Makefile  bput-bdel.c  bput-bget.c  bput-bget_secondary.c  bput-bget_secondary_local.c  bput-bgetn.c  bput-bgetp.c  grey_sort.c  index_name.c  plfs-bput-bgetn.c  plfs-put-get.c  put-del.c  put-del_secondary.c  put-del_secondary_local.c  put-get.c  put-get_2secondary.c  put-get_2secondary_local.c  put-get_secondary.c  put-get_secondary_local.c  put-getn.c  put-getn_primary.c  put-getn_secondary.c  put-getn_secondary_local.c  put-getp.c  put-getp_secondary.c  puts-gets.c  range_bget.c  range_test.c
meta/tests/tester/: mdhimtst.c
node/: .gitignore  Makefile.am  README.md
node/src/: Makefile.am  ec_perf.c  ec_perf.h  lf_connect.c  lf_connect.h  lf_test.c  lf_test.h  node.c  node.h  queue.h  util.c  w_pool.c  w_pool.h
patches/: ior.add_FAMfs_to_POSIX  userspace-rcu.PIC  userspace-rcu.stack_corruption_snapshot_n
scripts/: checkpatch.sh  cleanup.sh  famfs.conf.example  famfs.conf.template  famfs.conf.tests  famfs_test.sh  mpi_numactl.sh  setup-env.sh  test-env  test_cycle.sh
server/src/: Makefile.am  f_allocator.c  f_allocator.h  f_ec.c  f_ec.h  f_encode_recovery.c  f_encode_recovery.h  f_helper.c  f_layout_ctl.c  f_layout_ctl.h  f_recovery.c  f_recovery.h  lf_client.c  lf_client.h  log.h  unifycr_cmd_handler.c  unifycr_cmd_handler.h  unifycr_const.c  unifycr_const.h  unifycr_debug.c  unifycr_global.h  unifycr_init.c  unifycr_metadata.c  unifycr_metadata.h  unifycr_request_manager.c  unifycr_request_manager.h  unifycr_service_manager.c  unifycr_service_manager.h  unifycr_setup.h  unifycr_sock.c  unifycr_sock.h
t/: 0001-setup.t  9010-stop-famfsd.t  Makefile.am  famfs.conf  unifycr_unmount.c
t/sharness.d/: 00-test-env.sh  01-unifycr-settings.sh  02-functions.sh
t/sys/: open.c
util/unifycr/src/: Makefile.am  unifycr-rm.c  unifycr.c  unifycr.h
